--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -11,6 +11,7 @@
 	    <TextView android:id="@+id/help_text"
 	        android:layout_height="fill_parent"
 	        android:layout_width="fill_parent"
+	        android:autoLink="all"
 	        android:text="@string/help_text" />
 
     </ScrollView>
