--- a/res/layout/edit_alarm.xml
+++ b/res/layout/edit_alarm.xml
@@ -43,22 +43,24 @@
                 <Spinner android:id="@+id/edit_alarm_units_spinner"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:layout_weight="1"
+					android:drawSelectorOnTop="true"
+ 					android:prompt="@string/edit_alarm_units_spinner_prompt" />
 
             </LinearLayout>
 
-            <TextView android:id="@+id/edit_alarm_pick_from_map"
+            <Button android:id="@+id/edit_alarm_pick_from_map"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
-
-            <TextView android:text="@string/edit_alarm_or"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
+          
             <LinearLayout android:orientation="vertical"
                 android:id="@+id/edit_alarm_search_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >
+
+				<TextView android:text="@string/edit_alarm_or"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content" />
 
                 <TextView android:text="@string/edit_alarm_search_address"
                     android:layout_width="fill_parent"
@@ -68,7 +70,17 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
 
+				<Button android:id="@+id/edit_alarm_search_btn"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="@string/edit_alarm_search_btn" />
+
             </LinearLayout>
+
+			<Button android:id="@+id/edit_alarm_save"
+				android:text="@string/edit_alarm_save"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content" />
 
         </LinearLayout>
 
