Relicensed to GPL.

--- a/res/layout/edit_settings.xml
+++ b/res/layout/edit_settings.xml
@@ -6,19 +6,18 @@ Email: gopalkri@umich.edu / gopalkrishnaps@gmail.com
 This file is part of WakeUp!.
 
 Wake Up! is free software: you can redistribute it and/or modify
-it under the terms of the Lesser GNU General Public License as published by
+it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
 Wake Up! is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-Lesser GNU General Public License for more details.
+GNU General Public License for more details.
 
-You should have received a copy of the Lesser GNU General Public License
+You should have received a copy of the GNU General Public License
 along with Wake Up!.  If not, see <http://www.gnu.org/licenses/>.
 -->
-
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
